# lidar_bot

./: .gitignore  README.md
lidarbot_ws/: make_ws
lidarbot_ws/arduino/cmd_vel_sub_diff/: cmd_vel_sub_diff.ino
lidarbot_ws/src/hector_lidarbot/hector_mapping/launch/: mapping_default.launch
lidarbot_ws/src/lidarbot/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  package.xml
lidarbot_ws/src/lidarbot/launch/: lidarbot_teleop.launch  localize.launch  localize2.launch  mapper_teleop.launch  odomtransformer.launch  provide_map.launch
lidarbot_ws/src/lidarbot/maps/: corridor_map.yaml  room_map2.yaml
lidarbot_ws/src/lidarbot/nodes/: odomtransformer.py
lidarbot_ws/src/using_markers/: CMakeLists.txt  package.xml
lidarbot_ws/src/using_markers/src/: basic_shapes.cpp
lidarbot_ws/src/ydlidar2/: README.md  package.xml
lidarbot_ws/src/ydlidar2/launch/: TG.launch  lidar.launch  lidar_view.launch
lidarbot_ws/src/ydlidar2/sdk/: README.md
lidarbot_ws/src/ydlidar2/src/: ydlidar_node.cpp
src/arduino/cmd_vel_sub/: cmd_vel_sub.ino
src/arduino/cmd_vel_sub_steer/: cmd_vel_sub_steer.ino
src/arduino/motor_test/: motor_test.ino
src/ros/lidarbot/: CMakeLists.txt  package.xml
src/ros/lidarbot/launch/: lidarbot_teleop.launch  localize.launch  provide_map.launch
src/ros/lidarbot/maps/: room_map.yaml
src/ros/wall_follower_sim/: CMakeLists.txt  package.xml  params.yaml
src/ros/wall_follower_sim/launch/: wall_follower.launch
src/ros/wall_follower_sim/src/: controller.py  wall_follower.py
(+7 files in other folders)
